# Estoque_ET

./: .env  .env.example  .gitignore  CLAUDE.md  Prompt_Modulo_Fornecedores_Armazem_Machado.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  schema.sql  setup-usuarios.mjs  tailwind.config.js  test-backend.mjs  test-fornecedor-fk.mjs  test-realtime.mjs
e2e/: armazem.spec.ts  categoria-dropdown.spec.ts  categoria-integracao.spec.ts  codigo-auto.spec.ts  combobox-busca.spec.ts  cores.spec.ts  custo-entrada-saida.spec.ts  custo-por-unidade.spec.ts  desconto-fluxo.spec.ts  descontos.spec.ts  developer.spec.ts  dropdown-adicionar.spec.ts  estoque-busca.spec.ts  filtro-cor.spec.ts  fornecedores.spec.ts  grafico-tooltip.spec.ts  graficos.spec.ts  permissoes-config.spec.ts  zero-esquerda.spec.ts
e2e/helpers/: combo.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/data/: seedData.ts
src/hooks/: useAuth.ts  useCategorias.ts  useEstoque.ts  useLista.ts  usePermissions.ts  useRealtime.ts  useSync.ts  useTheme.ts  useToast.ts
src/services/: claude.ts  db.ts  supabase.ts  sync.ts
src/types/: index.ts
src/utils/: codigo.ts  data.ts  desconto.ts  listasPadrao.ts  mascaras.ts  (+3 more)
supabase/: desconto.sql  developer.sql  fix_permissoes.sql  migration_fornecedor_produto.sql  migration_fornecedores_completo.sql  migration_lona.sql  migration_usuarios_perfil.sql  perfil.sql  permissoes_admin.sql  preco_venda.sql  saidas.sql  schema.sql  seed.sql
(+46 files in other folders)
