[package]
name = "estoque-sync"
version = "0.1.0"
description = "EstoqueSync — Gerenciador de estoque offline-first com sincronização Supabase"
authors = []
edition = "2021"

[lib]
name = "estoque_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
